tests/NormalTests/paczka1/fuzzy1/34733895.err
Error in line 8: s3Q1v S671 -1,2
Error in line 6: s3Q1v S671 41,0
Error in line 26: s3Q1v A18 97,7
Error in line 25: lLfKpqd1ee A18 89,9
Error in line 29: j7fD7sY S671 114,5
Error in line 18: A18 S671 61,1
